--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 /drbd/www/cgi-bin/spx/AUTOMATISMOS/CTRL_FREC/SCRIPT_PERFORMANCE
 /drbd/www/cgi-bin/spx/AUTOMATISMOS/CTRL_FREC/DLG_PERFORMANCE
+/drbd/www/cgi-bin/spx/AUTOMATISMOS/TEST_DLG/SCRIPT_PERFORMANCE
+/drbd/www/cgi-bin/spx/AUTOMATISMOS/TEST_DLG/DLG_PERFORMANCE
