actualizacion del .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 *.log
+*.ini
 PROCESS/__pycache__/
 __pycache__
+CTRL_FREC/ctrl_process_frec_DLGID.py
+CTRL_FREC/error_process_DLGID.py
+TEST_DLG/error_process_DLGID.py
