commit of update remote repository

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,9 @@ CTRL_FREC/ctrl_process_frec_DLGID.py
 CTRL_FREC/error_process_DLGID.py
 TEST_DLG/error_process_DLGID.py
 
+.pydevproject
+.project
+.pydevproject
+.pydevproject
+CTRL_FREC/.project
+CTRL_FREC/.project
